added meta details for production

--- a/style.css
+++ b/style.css
@@ -15,27 +15,32 @@
     font-family: 'beausite-classic';
     src: url(/assets/fonts/BeausiteClassicWeb-Regular.woff);
 }
+
 @font-face {
     font-family: 'beausite-classic';
     src: url(/assets/fonts/BeausiteClassicWeb-RegularItalic.woff);
     font-style: italic
 }
+
 @font-face {
     font-family: 'beausite-classic';
     src: url(/assets/fonts/BeausiteClassicWeb-Light.woff);
     font-weight: 100;
 }
+
 @font-face {
     font-family: 'beausite-classic';
     src: url(/assets/fonts/BeausiteClassicWeb-LightItalic.woff);
     font-weight: 100;
     font-style: italic
 }
+
 @font-face {
     font-family: 'beausite-classic';
     src: url(/assets/fonts/BeausiteClassicWeb-Bold.woff);
     font-weight: bold;
 }
+
 @font-face {
     font-family: 'beausite-classic';
     src: url(/assets/fonts/BeausiteClassicWeb-BoldItalic.woff);
@@ -48,16 +53,20 @@ html {
     font-family: 'beausite-classic', sans-serif;
     font-size: 100%;
 }
+
 * {
     -webkit-box-sizing: border-box;
-            box-sizing: border-box;
+    box-sizing: border-box;
 }
+
 figure {
     margin: 0;
 }
+
 figcaption {
     text-align: right;
 }
+
 .upper {
     text-transform: uppercase;
 }
@@ -82,13 +91,16 @@ figcaption {
     max-width: 1920px;
     margin: 0 auto;
 }
-.g-wrapper > header,
-.g-wrapper > main {
+
+.g-wrapper>header,
+.g-wrapper>main {
     padding: 0 20px;
 }
+
 .g-header {
     position: relative;
 }
+
 .g-logo {
     display: block;
     position: relative;
@@ -97,38 +109,43 @@ figcaption {
     margin: 9rem auto 6.875rem;
     z-index: 50;
 }
+
 .g-logo--small {
     max-width: 330px;
 }
+
 .g-logo img {
     width: 100%;
     height: auto;
 }
+
 .g-header__cta {
     position: absolute;
     top: 170px;
     left: 20px;
 }
+
 .g-logo--row {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
 }
-.g-logo--row > * {
 
-}
+.g-logo--row>* {}
 
 /* navigation */
 .g-nav {
     list-style: none;
     text-align: center;
 }
+
 .g-nav ul {
     margin: 0;
     padding: 0;
     font-size: 1.8em;
     margin-top: 3.75rem;
 }
+
 .g-nav li {
     position: relative;
     top: 0;
@@ -137,12 +154,15 @@ figcaption {
     -webkit-transition: 0.25s;
     transition: 0.25s;
 }
-.g-nav li + li {
+
+.g-nav li+li {
     margin-left: 10px;
 }
+
 .g-nav li:hover {
     top: -3px;
 }
+
 .g-nav li:after {
     content: '';
     display: inline-block;
@@ -156,11 +176,13 @@ figcaption {
     transition: 0.25s;
     -webkit-transition: 0.25s;
 }
+
 .g-nav li:hover:after {
     opacity: 1;
     bottom: -3px;
 }
-.g-nav li > a {
+
+.g-nav li>a {
     text-decoration: none;
 }
 
@@ -173,48 +195,56 @@ figcaption {
 
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-            
+    -ms-flex-direction: row;
+    flex-direction: row;
+
     -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    flex-wrap: wrap;
 
     margin-top: 6.875rem;
     margin-bottom: 6.875rem;
 }
+
 .g-production-preview {
     width: 50%;
     padding: 2em;
 }
+
 .g-production-preview.even {
     text-align: right;
 }
+
 .g-production-preview__image {
     width: 100%;
     max-width: 80%;
 }
+
 .g-production-preview__article {
+    position: relative;
+
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
 
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
 
     -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
+    -ms-flex-align: start;
+    align-items: flex-start;
 
     -webkit-transition: 0.5s;
     transition: 0.5s;
 }
+
 .g-production-preview.even .g-production-preview__article {
     -webkit-box-align: end;
-        -ms-flex-align: end;
-            align-items: flex-end;
+    -ms-flex-align: end;
+    align-items: flex-end;
 }
+
 .g-production-preview__article img {
     width: 100%;
 
@@ -224,27 +254,32 @@ figcaption {
     -webkit-transition: 0.25s;
     transition: 0.25s;
 }
+
 .g-production-preview__article:hover img {
     -webkit-filter: sepia(100%) saturate(300%) brightness(70%) hue-rotate(290deg);
-            filter: sepia(100%) saturate(300%) brightness(70%) hue-rotate(290deg);
+    filter: sepia(100%) saturate(300%) brightness(70%) hue-rotate(290deg);
 }
+
 .g-production-preview__article p,
 .g-production-preview__article h2 {
     -webkit-transition: 0.25s;
     transition: 0.25s;
 }
+
 .g-production-preview__article:hover h2 {
     color: #EA5060;
 }
+
 .g-production-preview__article p {
     margin: 0;
     color: #EA5060;
 }
+
 .g-production-preview__article:hover p {
     color: #4F3244;
 }
 
-.g-production-preview__article p + p {
+.g-production-preview__article p+p {
     margin-top: 0.5em;
 }
 
@@ -252,15 +287,17 @@ figcaption {
 .g-production__article header {
     max-width: 50%;
 }
+
 .g-production__image {
     max-width: 100%;
     height: auto;
     -webkit-filter: sepia(100%) saturate(300%) brightness(70%) hue-rotate(290deg);
-            filter: sepia(100%) saturate(300%) brightness(70%) hue-rotate(290deg);
+    filter: sepia(100%) saturate(300%) brightness(70%) hue-rotate(290deg);
 }
+
 .g-production__description {
     -webkit-column-count: 2;
-            column-count: 2;
+    column-count: 2;
 }
 
 /* production list */
@@ -269,60 +306,88 @@ figcaption {
     padding-top: 2em;
     padding-bottom: 2em;
 }
-.g-production-preview__list-item header > * {
+
+.g-production-preview__list-item header {
+    position: relative;
     max-width: 66%;
 }
+
 .g-production-preview__list-item aside {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
     -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    flex-wrap: wrap;
     -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
 }
-.g-production-preview__list-item aside > * {
+
+.g-production-preview__list-item aside>* {
     max-width: 40%;
     -webkit-box-flex: 1;
-        -ms-flex: 1 40%;
-            flex: 1 40%;
+    -ms-flex: 1 40%;
+    flex: 1 40%;
 }
+
+.g-production-preview__list-item aside>*:nth-child(2) {
+    max-width: 20%;
+    -webkit-box-flex: 1;
+    -ms-flex: 1 20%;
+    flex: 1 20%;
+}
+
 .g-production-preview__list-item__address {
+    position: relative;
     text-align: right;
 }
+
+.g-production-preview__list-item__marker-icon {
+    position: absolute;
+    left: 5px;
+    top: -2px;
+}
+
 .g-production-preview__list-item__school h3 {
     margin-top: 0;
 }
 
 /* infos */
-
 .g-info__list-item header {
     text-align: center;
     cursor: pointer;
 }
+
 .g-info__list-item:nth-child(odd) header,
 .g-info__list-item:nth-child(odd) section {
     background-color: #4F3244;
 }
+
 .g-info__list-item:nth-child(odd) header h2 {
     color: #DDDE41;
 }
+
 .g-info__list-item:nth-child(odd) section,
 .g-info__list-item:nth-child(odd) section a {
     color: #fff;
 }
+
 .g-info__list-item:nth-child(even) header,
 .g-info__list-item:nth-child(even) section {
     background-color: #DDDE41;
 }
+
 .g-info__list-item:nth-child(even) header h2 {
     color: #4F3244;
 }
+
 .g-info__list-item__body {
     max-height: 0;
     overflow: hidden;
@@ -332,9 +397,74 @@ figcaption {
     -webkit-transition: 1s;
     transition: 1s;
 }
+
 .g-info__list-item--unfolded .g-info__list-item__body {
     padding: 20px;
     max-height: 1000px;
+}
+
+/* production meta infos */
+.g-production__meta-age {
+    display: inline-block;
+
+    width: 84px;
+    height: 84px;
+    border-radius: 50%;
+
+    background-color: #DDDE41;
+
+    -webkit-transform: rotate(12deg);
+    transform: rotate(12deg);
+
+    line-height: 84px;
+    text-align: center;
+    font-size: 2.5em;
+    font-weight: 100;
+}
+
+.g-production-preview .g-production__meta-age {
+    position: absolute;
+    top: 0;
+    right: 20px;
+    -webkit-transform: translateY(-50%) rotate(12deg);
+    transform: translateY(-50%) rotate(12deg);
+    z-index: 1;
+}
+
+.g-production-preview__list-item .g-production__meta-age {
+    position: absolute;
+    right: 0;
+    -webkit-transform: translate(40%, 25%) rotate(12deg);
+    transform: translate(40%, 25%) rotate(12deg);
+    z-index: 1;
+}
+
+.g-production-preview__list-item .g-production__meta_lang--de,
+.g-production-preview__list-item .g-production__meta_lang--fr {
+    position: absolute;
+    right: 0;
+    -webkit-transform: translate(120%, 0%) rotate(-7deg);
+    transform: translate(120%, 0%) rotate(-7deg);
+}
+
+.g-production-preview__list-item .g-production__meta_lang--de.g-production__meta_lang--both {
+    -webkit-transform: translate(110%, -50%) rotate(-37deg);
+    transform: translate(110%, -50%) rotate(-37deg);
+}
+
+.g-production-preview__list-item .g-production__meta_lang--fr.g-production__meta_lang--both {
+    -webkit-transform: translate(160%, 30%) rotate(25deg);
+    transform: translate(160%, 30%) rotate(25deg);
+}
+
+.g-production__meta-duration {
+    font-size: 3.5em;
+    text-align: center;
+}
+
+.g-production__meta-duration img {
+    -webkit-transform: translateY(25%);
+    transform: translateY(25%);
 }
 
 footer {
@@ -393,30 +523,36 @@ footer {
 }
 
 /* responsive */
-@media (max-width: 960px){
+@media (max-width: 960px) {
     .g-production-preview {
         width: 100%;
     }
+
     .g-production__description {
         -webkit-column-count: 1;
-                column-count: 1;
+        column-count: 1;
     }
+
     .g-btn__mobile-nav {
         display: block;
     }
+
     .g-nav--unfolded .g-btn__mobile-nav {
         -webkit-transform: rotate(-90deg);
-                transform: rotate(-90deg);
+        transform: rotate(-90deg);
     }
+
     .g-nav--unfolded .g-btn__mobile-nav span {
         background-color: #fff;
     }
+
     .g-nav {
         position: fixed;
         top: 0;
         left: 0;
         width: 100%;
     }
+
     .g-nav ul {
         max-height: 0;
         overflow: hidden;
@@ -428,25 +564,31 @@ footer {
         -webkit-transition: 0.75s;
         transition: 0.75s;
     }
+
     .g-nav.g-nav--unfolded {
         height: 100%;
         z-index: 100;
     }
+
     .g-nav.g-nav--unfolded ul {
         height: 100%;
         max-height: 1000px;
     }
+
     .g-nav li {
         display: block;
         text-align: right;
         padding-right: 20px;
     }
+
     .g-nav li:first-child {
         padding-top: 60px;
     }
+
     .g-nav li:last-child {
         padding-bottom: 60px;
     }
+
     .g-nav li a {
         opacity: 0;
         color: #fff;
@@ -454,68 +596,83 @@ footer {
         -webkit-transition: 0.75s;
         transition: 0.75s;
     }
+
     .g-nav.g-nav--unfolded li a {
         opacity: 1;
     }
 }
 
 /* typo only */
-h1, h2, h3 {
+h1,
+h2,
+h3 {
     text-transform: uppercase;
     font-weight: 100;
 }
+
 h1 {
     font-size: 3.75em;
     color: #4F3244;
     margin-bottom: 0;
 }
+
 h2 {
     font-size: 2.875em;
     margin-top: 0.25em;
     margin-bottom: 0.25em;
     color: #4F3244;
 }
+
 .g-info__list-item h2 {
     margin-top: 0;
     margin-bottom: 0;
     padding-top: 0.25em;
     padding-bottom: 0.25em;
 }
+
 h3 {
     font-size: 2.5em;
     margin-bottom: 0;
     color: #EA5060;
 }
+
 p {
     font-weight: 100;
     margin-top: 0;
 }
+
 p.g-production__lead {
     font-weight: bold;
     font-size: 2.5em;
     color: #EA5060;
 }
+
 p.g-production-preview__lead {
     font-weight: bold;
     font-size: 1.25em;
 }
+
 .g-production__article p,
 .g-production-preview__list-item p,
 .g-info__list-item p {
     font-size: 2.5em;
 }
+
 .g-production__article header p,
 .g-production-preview__list-item header p {
     font-weight: bold;
     color: #EA5060;
 }
+
 a {
     text-decoration: none;
     color: #4F3244;
 }
+
 a:not([class]) {
     text-decoration: underline;
 }
+
 a.g-link--large {
     display: block;
     max-width: 600px;
@@ -526,6 +683,7 @@ a.g-link--large {
     text-decoration: underline;
     text-transform: uppercase;
 }
+
 a.g-link--cta {
     display: inline-block;
     padding: 0.25em 0.5em;
@@ -537,16 +695,18 @@ a.g-link--cta {
     -webkit-transition: 0.25s;
     transition: 0.25s;
 }
+
 a.g-link--cta:hover {
     background-color: #EA5060;
     color: white;
 }
+
 figcaption {
     font-size: 1.25em;
     margin-bottom: 1em;
 }
 
 /* ! */
-.site-info{
-    display:none;
+.site-info {
+    display: none;
 }
